--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/dziennik
 spring.datasource.username=root
-spring.datasource.password=dziubas
+spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 security.jwt.token.secret-key=my-secret-key
+hibernate.enable_lazy_load_no_trans = true
